--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,150 +1,38 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: Node.js CI
-
+name: Docker Image CI
 env:
-  MONGO_URI: "mongodb+srv://crud-app:gWW2U8X4sbhua6c@cluster0.oj4jk.mongodb.net/CrudDatabase?retryWrites=true&w=majority"
+  REPOSITORY_NAME: logicalogbonna
+  IMAGE_NAME: ${{ github.repository }}
 
 on:
   push:
-     branches: [ main ]
-
-permissions:
-  id-token: write
-  contents: read
-  
+    branches: [ main ]
+    tags: [ v* ]
 
 jobs:
-  build:
+
+  docker-build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Create ZIP deployment package
-      run: |
-        zip -r deploy.zip . -x '*.git*'
-     
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.SECRET_ACCESS_KEY }}
-        aws-region: "us-east-1"
-
-    - name: Deploy to EB
-      uses: einaregilsson/beanstalk-deploy@v20
-      with:
-        aws_access_key: ${{ secrets.ACCESS_KEY_ID }}
-        aws_secret_key: ${{ secrets.SECRET_ACCESS_KEY }}
-        application_name: "Crud App"
-        environment_name: Crudapp-env
-        version_label: "ver-${{ github.sha }}"
-        region: "us-east-1"
-        deployment_package: deploy.zip
-
-    # - name: Upload package to S3 bucket
-    #   run: aws s3 cp deploy_package.zip s3://crud-app/
-
-    # - name: Create new ElasticBeanstalk Application Version
-    #   run: |
-    #     aws elasticbeanstalk create-application-version \
-    #     --application-name CrudApp \
-    #     --source-bundle S3Bucket="crud-app",S3Key="deploy.zip" \          
-    #     --version-label "ver-${{ github.sha }}" \
-    #     --description "commit-sha-${{ github.sha }}"
-
-    # - name: Deploy new ElasticBeanstalk Application Version
-    #   run: aws elasticbeanstalk update-environment --environment-name CrudApp-env-1 --version-label "ver-${{ github.sha }}"
-
-    #
-    # - name: Use Node.js ${{ matrix.node-version }}
-    #   uses: actions/setup-node@v2
-    #   with:
-    #     node-version: ${{ matrix.node-version }}
-    #     cache: 'npm'
-    # - run: npm ci
-    # - run: npm run build --if-present
-    ##- run: npm test
     
-    # - name: Generate deployment package
-    #   run: zip -r deploy.zip * -x "**node_modules**"
+    - name: Log in to Docker Hub
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+      with:
+        images: ${{env.logicalogbonna}}/${{env.IMAGE_NAME}}
     
-  # create_eb_version:
-  #   runs-on: ubuntu-latest
-  #   needs: [build]
-  #   steps:
-  #     - name: Deploy to EBS
-  #       uses: einaregilsson/beanstalk-deploy@v10
-  #       with:
-  #         aws_access_key: ${{secrets.AWS_ACCESS_KEY_ID}}
-  #         aws_secret_key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
-  #         application_name: "crud-app"
-  #         aws_region: "us-east-1"
-  #         deployment_package: deploy.zip 
-
-  #     - name: Deployed!
-  #         run: echo App deployed to ELB
-
-
-
-
-
-
-
-  # create_eb_version:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - name: Configure AWS credentials 
-  #       uses: aws-actions/configure-aws-credentials@v1
-  #       with:
-  #         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #         aws-region: ${{ env.AWS_REGION }}
-  
-  # deploy:
-  #   runs-on: ubuntu-latest
-  #   needs: [build]
-  #   steps:
-  #   #- name: Deploy to Elastic Beanstalk
-  #   - uses: hmanzur/actions-aws-eb@v1.0.0
-  #     with:
-  #       command: 'deploy ${{ secrets.ENVIRONMENT_NAME }}'
-  #     env:
-  #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-  #       AWS_DEFAULT_REGION: "us-east-1"
-  
-#   deploy_aws:
-#     needs: [build]
-#     runs-on: ubuntu-latest
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Python 3.6 (needed for eb cli)
-#       uses: actions/setup-python@v1
-#       with:
-#         python-version: "3.6"
-#     - name: "Configure AWS credentials" 
-#       uses: aws-actions/configure-aws-credentials@v1
-#       with:
-#           #aws-id: ${{ secrets.AWS_ID }}
-#         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-#         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-#           #aws-region: "us-east-1"
-#     - run: |
-# # AWS_VERSION_LABEL=${{env.APP_NAME}}-${{env.PIPELINE_ID}}
-
-#         echo "Installing Elastic Beanstalk Cli"
-#         python -m pip install --upgrade pip
-#         pip install awsebcli --upgrade
-#       #  eb --version
-
-#           echo "Deploy init"
-#           eb init 
-#       # -i ${{env.APP_NAME}} -p ${{env.AWS_PLATFORM}} -k ${{secrets.AWS_ID}} --region ${{env.AWS_REGION}}
-#           eb deploy 
-#       # ${{env.APP_NAME}} --version ${AWS_VERSION_LABEL}
-#           echo "Deploy finished"
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: .
+        push: true
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
