--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    
+
+    - name: "Echo"
+      run: |
+        echo ${{secrets.DOCKER_USERNAME}}
+        echo ${{secrets.DOCKER_PASSWORD}}
+
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{secrets.DOCKER_USERNAME}}
+        password: ${{secrets.DOCKER_PASSWORD}}
         
     - name: Extract metadata (tags, labels) for Docker
       id: meta
