--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Docker Image CI
 env:
   REPOSITORY_NAME: logicalogbonna
-  IMAGE_NAME: ${{ github.repository }}
 
 on:
   push:
@@ -17,11 +16,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: "Echo"
-      run: |
-        echo ${{secrets.DOCKER_USERNAME}}
-        echo ${{secrets.DOCKER_PASSWORD}}
-
     - name: Log in to Docker Hub
       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
       with:
@@ -32,7 +26,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
       with:
-        images: ${{env.logicalogbonna}}/${{env.IMAGE_NAME}}
+        images: ${{env.REPOSITORY_NAME}}/node-sample-application
     
     - name: Build and push Docker image
       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
