--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Node App Docker Image CI
 env:
   REPOSITORY_NAME: logicalogbonna
 
@@ -12,26 +12,70 @@ jobs:
   docker-build:
 
     runs-on: ubuntu-latest
+    env:
+      APPLICATION_NAME: node-sample-application
+      DOCKER_REPOSITORY: logicalogbonna/node-sample-application
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+      uses: actions/checkout@v2
 
     - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      uses: docker/login-action@v1.8.0
       with:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{secrets.DOCKER_PASSWORD}}
-        
-    - name: Extract metadata (tags, labels) for Docker
-      id: meta
-      uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-      with:
-        images: ${{env.REPOSITORY_NAME}}/node-sample-application
+        logout: false
     
-    - name: Build and push Docker image
-      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-      with:
-        context: .
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
+    - name: Build App
+      run: |
+        docker build -t $DOCKER_REPOSITORY:$GITHUB_SHA .
+        docker push $DOCKER_REPOSITORY:$GITHUB_SHA
+  
+  deploy: 
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Install yq
+        run: |
+          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.9.3/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          repository: ashton-arinze/kubernetes
+          path: "argo-cd/sample-fullstack-app.yml"
+          ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
+          ref: "main"
+
+      - name: Change tag and push changes
+        run: |
+          cd k8s-manifests
+          yq eval -i ".image.tag = \"${GITHUB_SHA}\"" argo-cd/sample-fullstack-app.yml
+          head argo-cd/sample-fullstack-app.yml
+
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git config pull.rebase false  # merge
+          git add argo-cd/sample-fullstack-app.yml
+          git commit -m "CI - Deployed this ${{GITHUB_SHA}} version"
+          git fetch
+          git pull
+          git push
+    
+        
+    # - name: Extract metadata (tags, labels) for Docker
+    #   id: meta
+    #   uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+    #   with:
+    #     images: ${{env.REPOSITORY_NAME}}/node-sample-application
+    
+    # - name: Build and push Docker image
+    #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+    #   with:
+    #     context: .
+    #     push: true
+    #     tags: ${{ steps.meta.outputs.tags }}
+    #     labels: ${{ steps.meta.outputs.labels }}
