--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,8 +46,8 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: ashton-arinze/kubernetes
-          path: "argo-cd/sample-fullstack-app.yml"
-          ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
+          path: "argo-cd"
+          # ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
           ref: "main"
 
       - name: Change tag and push changes
