--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           repository: ashton-arinze/kubernetes
           path: ./kubernetes
           token: ${{ secrets.my_pat }}
-          ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
+          # ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
           ref: "main"
 
       - name: Change tag and push changes
