--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,13 @@ jobs:
     needs: docker-build
 
     steps:
+      - name: Clone docs repository
+        uses: actions/checkout@v2
+        with:
+          repository: supercharge/docs
+          path: resources/docs/2.x
+          ref: 2.x
+
       - name: Install yq
         run: |
           sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.9.3/yq_linux_amd64
@@ -45,7 +52,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@master
         with:
-          repository: ashton-arinze/kubernetes
+          repository: "ashton-arinze/kubernetes"
           path: ./kubernetes
           token: ${{ secrets.my_pat }}
           # ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
