--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,26 +36,19 @@ jobs:
     runs-on: ubuntu-latest
     needs: docker-build
 
-    steps:
-      - name: Clone docs repository
-        uses: actions/checkout@v2
-        with:
-          repository: supercharge/docs
-          path: resources/docs/2.x
-          ref: 2.x
-        
+    steps:  
+      - name: Install yq
+        run: |
+          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.9.3/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
       - name: Clone GitOps repo 
         uses: actions/checkout@v2
         with:
           repository: "ashton-arinze/kubernetes"
           path: kubernetes
           # token: ${{ secrets.my_pat }}
-          ref: main
-
-      - name: Install yq
-        run: |
-          sudo wget -O /usr/local/bin/yq https://github.com/mikefarah/yq/releases/download/v4.9.3/yq_linux_amd64
-          sudo chmod +x /usr/local/bin/yq
+          ref: master
 
       - name: Change tag and push changes
         run: |
@@ -86,3 +79,6 @@ jobs:
     #     push: true
     #     tags: ${{ steps.meta.outputs.tags }}
     #     labels: ${{ steps.meta.outputs.labels }}
+
+
+#/usr/bin/git -c protocol.version=2 fetch --no-tags --prune --progress --no-recurse-submodules --depth=1 origin +refs/heads/2.x*:refs/remotes/origin/2.x* +refs/tags/2.x*:refs/tags/2.x*
