--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,8 @@ jobs:
         with:
           repository: "ashton-arinze/kubernetes"
           path: kubernetes
-          # token: ${{ secrets.my_pat }}
+          token: ${{ secrets.my_pat }}
+          # ssh-key: ${{ secrets.REPO_K8S_MANIFESTS_SSHKEY }}
           ref: master
 
       - name: Change tag and push changes
